--- a/audio-mixer-library/build.gradle
+++ b/audio-mixer-library/build.gradle
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.google.guava:guava:15.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
