--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.snail.audiomixer.example">
 
-    <application 
+    <application
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
->
-
+        android:icon="@drawable/ic_launcher">
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
